--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -20,26 +20,35 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    <div>
-        <nav class="navbar sticky-top navbar-light bg-primary">
-            <a class="navbar-brand" style="color: azure;">Credit Management</a>
-            <form class="form-inline">
-                <a href="/"><button class="btn btn-warning my-2 my-sm-0 mx-2">HOME</button></a>
-                <a href="/view_user" class="nav-link"><button class="btn btn-warning my-2 my-sm-0 mx-4">view_user </button></a>
-            </form>
-        </nav>
 
-        <div style="padding: 500px; ">
+    <div class="bg container-fluid">
 
-        </div>
-        <nav class="navbar bottom navbar-light bg-primary">
-            <a class="navbar-brand" href="#">Fixed bottom</a>
-        </nav>
+        <center>
+            <div style="padding: 100px;">
+                <h1 class="head" style="font-size:100px;">Credit Manager</h1>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h2 class="card-title">About</h2>
+                    <h6 class="card-subtitle mb-2 text-muted">Credit Manager</h6>
+                    <p class="card-text">Credit Manager is a web app where you can transfer credits from one person to other.It includes view users,single user,transactions table.</p>
+                    
+                    <a href="view_user"><button class="btn " style="font-size: 25px;"> START </button></a>
+
+                </div>
+            </div>
+
+            {{!-- <button class="btn " style="font-size: 30px; border-radius:40px;"> START </button> --}}
+
+        </center>
+
     </div>
-
 
 
 </body>
