--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@ body, html {
     background-image: url("img12.jpg");
     height: 100%; 
     background-position: center;
-  
+    background-repeat: repeat;  
     background-size: cover;
   }
 
