--- a/public/style.css
+++ b/public/style.css
@@ -4,9 +4,9 @@ body, html {
   
   .bg { 
     background-image: url("img12.jpg");
-    height: 100%; 
+    /* height: 100%;  */
+    background-repeat: repeat;
     background-position: center;
-     
     background-size: cover;
   } 
 
